@@ -28,4 +28,4 @@ requires:
   POE::Filter::DHCPd::Lease: 0.04
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.02_0004
+version: 0.03
